DevOCL/src/objects/CLQ_Standard_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Default__c</fullName>
        <inlineHelpText>Provide the value of the detail (e.g. Fee amount, Document Name)</inlineHelpText>
        <label>Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Detail_Name__c</fullName>
        <inlineHelpText>Provide the name of the detail (e.g. Renewal Fee, New Application Fee )</inlineHelpText>
        <label>Detail Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Standard Detail object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Standard Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Detail_Name__c</columns>
        <columns>CLQ_Default__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CLQ_Document_List</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Detail_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Standard_Detail__c.CLQ_Document</value>
        </filters>
        <label>Document List</label>
    </listViews>
    <listViews>
        <fullName>Fee</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Detail_Name__c</columns>
        <columns>CLQ_Default__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Standard_Detail__c.CLQ_Fee</value>
        </filters>
        <label>Fee</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Standard Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Details</pluralLabel>
    <recordTypes>
        <fullName>CLQ_Document</fullName>
        <active>true</active>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Fee</fullName>
        <active>true</active>
        <label>Fee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>